Filter the companies Add job schedule for updating the cache ( disable now )

--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -81,10 +81,10 @@
         <table class="table table-bordered" style="margin-top: 30px;">
             <thead>
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First name</th>
-                    <th scope="col">Last name</th>
-                    <th scope="col" colspan="3">Options</th>
+                    <th scope="col" style="border-bottom: 0px;">#</th>
+                    <th scope="col" style="border-bottom: 0px;">First name</th>
+                    <th scope="col" style="border-bottom: 0px;">Last name</th>
+                    <th scope="col" colspan="3" style="border-bottom: 0px;">Options</th>
                 </tr>
             </thead>
             <tbody th:if = "${users.size() > 0}">
