--- a/src/main/resources/templates/company/index.html
+++ b/src/main/resources/templates/company/index.html
@@ -80,9 +80,9 @@
         <table class="table table-bordered" style="margin-top: 30px;">
             <thead>
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Company name</th>
-                    <th scope="col" colspan="2">Options</th>
+                    <th scope="col" style="border-bottom: 0px;">#</th>
+                    <th scope="col" style="border-bottom: 0px;">Company name</th>
+                    <th scope="col" colspan="2" style="border-bottom: 0px;">Options</th>
                 </tr>
             </thead>
             <tbody th:if = "${companies.size() > 0}">
