--- a/src/main/resources/templates/activity/index.html
+++ b/src/main/resources/templates/activity/index.html
@@ -83,16 +83,16 @@
         <table class="table table-bordered" style="margin-top: 30px;">
             <thead>
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Subject</th>
-                    <th scope="col">Reference</th>
-                    <th scope="col">Activity</th>
-                    <th scope="col">Company</th>
-                    <th scope="col">Contact</th>
-                    <th scope="col">Location</th>
-                    <th scope="col">Date</th>
-                    <th scope="col">Status</th>
-                    <th scope="col" colspan="2">Options</th>
+                    <th scope="col" style="border-bottom: 0px;">#</th>
+                    <th scope="col" style="border-bottom: 0px;">Subject</th>
+                    <th scope="col" style="border-bottom: 0px;">Reference</th>
+                    <th scope="col" style="border-bottom: 0px;">Activity</th>
+                    <th scope="col" style="border-bottom: 0px;">Company</th>
+                    <th scope="col" style="border-bottom: 0px;">Contact</th>
+                    <th scope="col" style="border-bottom: 0px;">Location</th>
+                    <th scope="col" style="border-bottom: 0px;">Date</th>
+                    <th scope="col" style="border-bottom: 0px;">Status</th>
+                    <th scope="col" colspan="2" style="border-bottom: 0px;">Options</th>
                 </tr>
             </thead>
             <tbody th:if = "${activities.size() > 0}">
