--- a/src/main/resources/templates/admin/edit_user.html
+++ b/src/main/resources/templates/admin/edit_user.html
@@ -20,6 +20,7 @@
                 <div class="form-group">
                     <label for="password">Password</label>
                     <input type="text" class="form-control" id="password" placeholder="Enter password" th:value="${''}" th:field="*{password}" >
+                    <span style="color: red; font-style: italic;font-size: 12px;">Leave it blank if you don't want to change it!</span>
                 </div>
                 <div class="form-group">
                     <label for="firstName">First Name</label>
@@ -37,8 +38,8 @@
                 <div class="form-group">
                     <label for="active">Active</label>
                     <select class="form-control" id="active" th:field="*{active}">
-                        <option th:value="1" th:text="Yes" th:selected="(1 == ${user.getActive()})"></option>
-                        <option th:value="0" th:text="No" th:selected="(0 == ${user.getActive()})"></option>
+                        <option th:value="1" th:text="Yes" th:selected="(${user.isActive() == 1})"></option>
+                        <option th:value="0" th:text="No" th:selected="(${user.isActive() == 0})"></option>
                     </select>
                 </div>
 
