--- a/src/main/resources/templates/contact/add_contact.html
+++ b/src/main/resources/templates/contact/add_contact.html
@@ -14,57 +14,56 @@
         </script>
 
         <div class="container-fluid">
-            <h2 style="margin-top: 25px; text-align: center;">Edit Contact</h2>
-            <form class="col-lg-6 offset-lg-3 border" style="padding: 15px; margin-top: 30px; margin-bottom: 30px;" th:action="@{/contact/updateContact/{id}(id=${contact.getId()}) }" th:object="${contact}" method="post" autocomplete="off">
+            <h2 style="margin-top: 25px; text-align: center;">Add Contact</h2>
+            <form class="col-lg-6 offset-lg-3 border" style="padding: 15px; margin-top: 30px; margin-bottom: 30px;" th:action="@{/contact/saveContact}" method="post" autocomplete="off">
                 <div class="form-group">
                     <label for="name">Contact name</label>
-                    <input type="text" class="form-control" id="name" placeholder="Enter contact name" th:value="${contact.getName()}" th:field="*{name}">
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter contact name">
                 </div>
                 <div class="form-group">
                     <label for="company">Company</label>
-                    <select class="form-control" id="company" name="company" th:required="required" th:field="*{company}">
+                    <select class="form-control" id="company" name="company" th:required="required">
                         <option value="">Select company</option>
                         <option th:each="company : ${companies}"
                                 th:value="${company.getId()}"
-                                th:selected="(${company.getId()} == ${contact.getCompany().getId()})"
                                 th:text="${company.getName()}">
                         </option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="position">Contact position</label>
-                    <input type="text" class="form-control" id="position" name="position" th:value="${contact.getPosition()}" th:field="*{position}" placeholder="Enter contact position">
+                    <input type="text" class="form-control" id="position" name="position" placeholder="Enter contact position">
                 </div>
                 <div class="form-group">
                     <label for="department">Contact department</label>
-                    <input type="text" class="form-control" id="department" th:value="${contact.getDepartment()}" th:field="*{department}" name="department" placeholder="Enter contact department">
+                    <input type="text" class="form-control" id="department" name="department" placeholder="Enter contact department">
                 </div>
                 <div class="form-group">
                     <label for="country">Contact country</label>
-                    <input type="text" class="form-control" id="country" th:value="${contact.getCountry()}" th:field="*{country}" name="country" placeholder="Enter contact country">
+                    <input type="text" class="form-control" id="country" name="country" placeholder="Enter contact country">
                 </div>
                 <div class="form-group">
                     <label for="email">Contact email</label>
-                    <input type="text" class="form-control" id="email" name="email" th:value="${contact.getEmail()}" th:field="*{email}" placeholder="Enter contact email">
+                    <input type="text" class="form-control" id="email" name="email" placeholder="Enter contact email">
                 </div>
                 <div class="form-group">
                     <label for="phone">Contact phone</label>
-                    <input type="text" class="form-control" id="phone" name="phone" th:value="${contact.getPhone()}" th:field="*{phone}" placeholder="Enter contact phone">
+                    <input type="text" class="form-control" id="phone" name="phone" placeholder="Enter contact phone">
                 </div>
                 <div class="form-group">
                     <label for="status">Contact status</label>
-                    <select class="form-control" id="status" name="status" th:required="required" th:field="*{status}">
+                    <select class="form-control" id="status" name="status" th:required="required">
                         <option value="">Select status</option>
-                        <option value="active" th:selected="(${contact.getStatus() == 'active'})">Active</option>
-                        <option value="inactive" th:selected="(${contact.getStatus() == 'inactive'})">Inactive</option>
+                        <option value="active">Active</option>
+                        <option value="inactive">Inactive</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="consent">Contact consent</label>
-                    <input type="checkbox" id="consent" name="consent" th:checked="${contact.isConsent()}">
+                    <input type="checkbox" id="consent" name="consent">
                 </div>
 
-                <button type="submit" class="btn btn-primary">Update</button>
+                <button type="submit" class="btn btn-primary">Add</button>
                 <a th:href="@{'/contact/index'}" class="btn btn-warning float-right text-white">Cancel</a>
             </form>
         </div>
