--- a/src/main/resources/templates/contact/index.html
+++ b/src/main/resources/templates/contact/index.html
@@ -74,7 +74,7 @@
             </select>
         </div>
         <div style="float: right; margin-bottom: 20px; margin-top: 20px;">
-            <a th:href="@{'/company/exportExcel'}"><img src="/icons/excel_icon.png" height="40" width="40" style="margin-bottom: 5px;"/></a>
+            <a th:href="@{'/contact/exportExcel'}"><img src="/icons/excel_icon.png" height="40" width="40" style="margin-bottom: 5px;"/></a>
 <!--            <input type="text" name="searchText" id="searchText" class="form-control" th:value="${companyName == ''}? '' : ${companyName}" style="width: auto; display: inline;">-->
         </div>
         <table class="table table-bordered" style="margin-top: 30px;">
@@ -82,6 +82,14 @@
                 <tr>
                     <th scope="col" style="border-bottom: 0px;">#</th>
                     <th scope="col" style="border-bottom: 0px;">Contact name</th>
+                    <th scope="col" style="border-bottom: 0px;">Company</th>
+                    <th scope="col" style="border-bottom: 0px;">Department</th>
+                    <th scope="col" style="border-bottom: 0px;">Position</th>
+                    <th scope="col" style="border-bottom: 0px;">Country</th>
+                    <th scope="col" style="border-bottom: 0px;">Email</th>
+                    <th scope="col" style="border-bottom: 0px;">Phone</th>
+                    <th scope="col" style="border-bottom: 0px;">Status</th>
+                    <th scope="col" style="border-bottom: 0px;">Consent</th>
                     <th scope="col" colspan="2" style="border-bottom: 0px;">Options</th>
                 </tr>
             </thead>
@@ -89,6 +97,15 @@
                 <tr th:each="contact, contactCount : ${contacts}">
                         <td th:text="${contactCount.count}"></td>
                         <td th:text="${contact.getName()}"></td>
+                        <td th:text="${contact.getCompany().getName()}"></td>
+                        <td th:text="${contact.getDepartment()}"></td>
+                        <td th:text="${contact.getPosition()}"></td>
+                        <td th:text="${contact.getCountry()}"></td>
+                        <td th:text="${contact.getEmail()}"></td>
+                        <td th:text="${contact.getPhone()}"></td>
+                        <td th:text="${contact.getStatus()}"></td>
+                        <td th:class="text-center" th:if="!${contact.isConsent()}"><i class="fa fa-ban text-danger fa-2x" aria-hidden="true"></i></td>
+                        <td th:class="text-center" th:if="${contact.isConsent()}"><i class="fa fa-check text-success fa-2x" aria-hidden="true"></i></td>
                         <td align="center" style="width: 100px;"><a sec:authorize="hasAuthority('Edit_Contact')" th:href="@{'/contact/editContact/' + ${contact.getId()}}" class="btn btn-success btn-sm text-white" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></a></td>
                         <td align="center" style="width: 100px;">
                             <a sec:authorize="hasAuthority('Delete_Contact')" class="btn btn-danger btn-sm text-white" type="button" data-toggle="modal" th:attr="data-object-id=''+${contact.getId()}+''" data-target="#deleteContact" data-placement="top" title="Delete"><i class="fa fa-trash"></i></a>
