--- a/src/main/resources/templates/activity/add_activity.html
+++ b/src/main/resources/templates/activity/add_activity.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="form-group">
                     <label for="date">Date</label>
-                    <input type="text" class="form-control" id="date" name="date" placeholder="Enter reference" th:required="required">
+                    <input type="text" class="form-control date" id="date" name="date" placeholder="Enter date" th:required="required">
                 </div>
                 <div class="form-group">
                     <label for="status">Status</label>
